
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int memcpy (char*,char*,int) ;
 char* strchr (char*,char) ;

int CompDName(char *buf, char *dname)
{
 char *p = buf, *p1;

 while((*dname) && (dname))
 {
  if((*dname == '.') && (!*(dname + 1)))
   break;
  p1 = strchr(dname, '.');
  if(!p1)
   p1 = strchr(dname, 0);
  *(p++) = p1 - dname;
  memcpy(p, dname, p1 - dname);
  p += p1 - dname;
  dname = p1;
  if(*p1)
   dname++;
 }
 *(p++) = 0;
 return(p - buf);
}
